--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.26.3",
     "cra-template": "1.2.0",
     "eslint-plugin-jsx": "^0.1.0",
     "react": "^19.0.0",
@@ -23,7 +22,8 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ]
   },
   "browserslist": {
@@ -40,7 +40,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
-    "@babel/eslint-parser": "^7.26.5",
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.20.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.57.1",
